--- a/app/src/main/res/layout/fragment_awning_details.xml
+++ b/app/src/main/res/layout/fragment_awning_details.xml
@@ -33,12 +33,12 @@
             android:id="@+id/temperatureTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:textSize="36sp"
-            android:text="36\u2103"
             android:layout_margin="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:fontFamily="@font/roboto"
+            android:text="36\u2103"
+            android:textSize="36sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/timeRangeSlider"
@@ -71,6 +71,13 @@
         app:layout_constraintDimensionRatio="2:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/centerGuidLine1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
         <TextView
             android:id="@+id/timeTitleTextView"
@@ -108,13 +115,44 @@
             app:layout_constraintTop_toBottomOf="@id/timeSwitcher"
             tools:visibility="visible" />
 
-        <Button
-            android:id="@+id/testButton"
+        <TextView
+            android:id="@+id/startTimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Test"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="11:30 πμ"
+            android:textSize="32sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@id/seperatorTimeTextView" />
+
+        <TextView
+            android:id="@+id/seperatorTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="-"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/centerGuidLine1"
+            app:layout_constraintStart_toEndOf="@id/startTimeTextView"
+            app:layout_constraintStart_toStartOf="@id/centerGuidLine1" />
+
+        <TextView
+            android:id="@+id/stopTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="16:30 μμ"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/seperatorTimeTextView" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
