Fix config implementetion and ui update.

--- a/app/src/main/res/layout/fragment_awning_details.xml
+++ b/app/src/main/res/layout/fragment_awning_details.xml
@@ -48,6 +48,8 @@
             android:layout_height="wrap_content"
             android:text="Αλλάξτε τη θέση της τέντας χειροκίνητα.\n "
             android:visibility="invisible"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toTopOf="@id/positionSlider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            android:text="Κατεβασμένη"
+            android:text="@string/downAwningPosition"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/positionSlider"
@@ -85,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
-            android:text="Ανεβασμένη"
+            android:text="@string/upAwningPosition"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/positionSlider"
