Update awning position UI with progress bar and add position implementation.

--- a/app/src/main/res/values-el/strings_el.xml
+++ b/app/src/main/res/values-el/strings_el.xml
@@ -30,4 +30,6 @@
     <string name="downAwningPosition">Κατεβασμένη</string>
     <string name="upAwningPosition">Ανεβασμένη</string>
 
+    <string name="live_data_description">Ανανέωση πληροφοριών ανά 5\</string>
+
 </resources>
