--- a/app/src/main/res/layout/fragment_awning_details.xml
+++ b/app/src/main/res/layout/fragment_awning_details.xml
@@ -12,12 +12,23 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <TextView
+        android:id="@+id/liveTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/live_data_description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/controlConstraintLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/cardview_background_16"
@@ -27,7 +38,7 @@
         app:layout_constraintBottom_toTopOf="@id/timeConstraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/liveTextView">
 
         <TextView
             android:id="@+id/temperatureTextView"
@@ -42,17 +53,71 @@
             tools:text="36\u2103"
             tools:visibility="visible" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:max="200"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:rotationX="180"
+            android:rotationY="180"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/positionSlider"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/positionDescriptionTextView"
+            tools:progress="100"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/positionPercentIconTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="%"
+            android:textColor="@color/purple_500"
+            android:textSize="16dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/positionPercentTextView"
+            app:layout_constraintEnd_toEndOf="@id/positionPercentTextView"
+            app:layout_constraintStart_toStartOf="@id/positionPercentTextView"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/positionPercentTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:autoSizeTextType="uniform"
+            android:fontFamily="@font/roboto_medium"
+            android:gravity="center"
+            android:textColor="@color/purple_500"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/progressBar"
+            app:layout_constraintEnd_toEndOf="@id/progressBar"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="@id/progressBar"
+            app:layout_constraintTop_toTopOf="@id/progressBar"
+            tools:text="100"
+            tools:visibility="visible" />
+
+
         <TextView
             android:id="@+id/positionDescriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Αλλάξτε τη θέση της τέντας χειροκίνητα.\n "
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/positionSlider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/temperatureTextView"
             tools:visibility="visible" />
 
         <com.google.android.material.slider.Slider
