--- a/app/src/main/res/layout/fragment_awning_details.xml
+++ b/app/src/main/res/layout/fragment_awning_details.xml
@@ -129,6 +129,7 @@
             android:valueFrom="0"
             android:valueTo="100"
             android:visibility="invisible"
+            app:labelBehavior="gone"
             app:layout_constraintBottom_toTopOf="@id/downDescriptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
