--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.2.6</domain>
+        <domain includeSubdomains="true">46.176.166.222</domain>
     </domain-config>
 </network-security-config>
