--- a/app/src/main/res/drawable/ic_not_sun.xml
+++ b/app/src/main/res/drawable/ic_not_sun.xml
@@ -1,12 +1,12 @@
 <vector android:height="56dp" android:viewportHeight="512"
     android:viewportWidth="512" android:width="56dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#888888" android:pathData="M256,256m-144,0a144,144 0,1 1,288 0a144,144 0,1 1,-288 0"/>
-    <path android:fillColor="#888888" android:pathData="m256,80c-8.837,0 -16,-7.164 -16,-16v-48c0,-8.836 7.163,-16 16,-16s16,7.164 16,16v48c0,8.836 -7.163,16 -16,16z"/>
-    <path android:fillColor="#888888" android:pathData="m256,512c-8.837,0 -16,-7.164 -16,-16v-48c0,-8.836 7.163,-16 16,-16s16,7.164 16,16v48c0,8.836 -7.163,16 -16,16z"/>
-    <path android:fillColor="#888888" android:pathData="m496,272h-48c-8.837,0 -16,-7.164 -16,-16s7.163,-16 16,-16h48c8.837,0 16,7.164 16,16s-7.163,16 -16,16z"/>
-    <path android:fillColor="#888888" android:pathData="m64,272h-48c-8.837,0 -16,-7.164 -16,-16s7.163,-16 16,-16h48c8.837,0 16,7.164 16,16s-7.163,16 -16,16z"/>
-    <path android:fillColor="#888888" android:pathData="m391.765,136.235c-14.126,0 -21.422,-17.206 -11.313,-27.314l33.941,-33.941c6.249,-6.248 16.38,-6.249 22.627,0 6.249,6.248 6.249,16.379 0,22.627l-33.941,33.941c-3.125,3.125 -7.22,4.687 -11.314,4.687z"/>
-    <path android:fillColor="#888888" android:pathData="m86.294,441.706c-14.126,0 -21.422,-17.206 -11.313,-27.314l33.941,-33.941c6.25,-6.248 16.381,-6.248 22.627,0 6.249,6.248 6.249,16.379 0,22.627l-33.942,33.942c-3.124,3.123 -7.218,4.686 -11.313,4.686z"/>
-    <path android:fillColor="#888888" android:pathData="m425.706,441.706c-4.095,0 -8.189,-1.562 -11.313,-4.686l-33.941,-33.941c-6.249,-6.249 -6.249,-16.379 0,-22.627 6.248,-6.249 16.379,-6.249 22.627,0l33.941,33.941c10.108,10.106 2.812,27.313 -11.314,27.313z"/>
-    <path android:fillColor="#888888" android:pathData="m120.235,136.235c-4.095,0 -8.189,-1.562 -11.313,-4.686l-33.942,-33.941c-6.249,-6.249 -6.249,-16.379 0,-22.627 6.248,-6.249 16.379,-6.249 22.627,0l33.941,33.941c10.109,10.107 2.813,27.313 -11.313,27.313z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="M256,256m-144,0a144,144 0,1 1,288 0a144,144 0,1 1,-288 0"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m256,80c-8.837,0 -16,-7.164 -16,-16v-48c0,-8.836 7.163,-16 16,-16s16,7.164 16,16v48c0,8.836 -7.163,16 -16,16z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m256,512c-8.837,0 -16,-7.164 -16,-16v-48c0,-8.836 7.163,-16 16,-16s16,7.164 16,16v48c0,8.836 -7.163,16 -16,16z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m496,272h-48c-8.837,0 -16,-7.164 -16,-16s7.163,-16 16,-16h48c8.837,0 16,7.164 16,16s-7.163,16 -16,16z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m64,272h-48c-8.837,0 -16,-7.164 -16,-16s7.163,-16 16,-16h48c8.837,0 16,7.164 16,16s-7.163,16 -16,16z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m391.765,136.235c-14.126,0 -21.422,-17.206 -11.313,-27.314l33.941,-33.941c6.249,-6.248 16.38,-6.249 22.627,0 6.249,6.248 6.249,16.379 0,22.627l-33.941,33.941c-3.125,3.125 -7.22,4.687 -11.314,4.687z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m86.294,441.706c-14.126,0 -21.422,-17.206 -11.313,-27.314l33.941,-33.941c6.25,-6.248 16.381,-6.248 22.627,0 6.249,6.248 6.249,16.379 0,22.627l-33.942,33.942c-3.124,3.123 -7.218,4.686 -11.313,4.686z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m425.706,441.706c-4.095,0 -8.189,-1.562 -11.313,-4.686l-33.941,-33.941c-6.249,-6.249 -6.249,-16.379 0,-22.627 6.248,-6.249 16.379,-6.249 22.627,0l33.941,33.941c10.108,10.106 2.812,27.313 -11.314,27.313z"/>
+    <path android:fillColor="@color/itemDisable" android:pathData="m120.235,136.235c-4.095,0 -8.189,-1.562 -11.313,-4.686l-33.942,-33.941c-6.249,-6.249 -6.249,-16.379 0,-22.627 6.248,-6.249 16.379,-6.249 22.627,0l33.941,33.941c10.109,10.107 2.813,27.313 -11.313,27.313z"/>
 </vector>
