--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="itemDisable">#CACACA</color>
+    <color name="sunEnable">#FFE500</color>
+    <color name="coldAndWaterColor">#68B1FF</color>
 </resources>
