--- a/app/src/main/res/layout/fragment_local_or_public.xml
+++ b/app/src/main/res/layout/fragment_local_or_public.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="36dp"
         android:gravity="center"
-        android:text="Η συσκευή που θέλετε να προσθέσετε βρίσκετε στο τοπικό δίκρυο"
+        android:text="@string/localOrPublicDescriptionText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/localOrPublicRadioGroup"
@@ -32,14 +32,14 @@
             android:layout_height="match_parent"
             android:layout_margin="16dp"
             android:checked="true"
-            android:text="Local" />
+            android:text="@string/localButtonText" />
 
         <RadioButton
             android:id="@+id/publicRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="16dp"
-            android:text="Public" />
+            android:text="@string/publicButtonText" />
     </RadioGroup>
 
     <Button
@@ -51,7 +51,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Συνέχεια"
+        android:text="@string/localOrPublicProceedButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
